agregando entity y conexion a bd

--- a/PAESP/appsettings.json
+++ b/PAESP/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "PAESPConexion": "Data Source=144.91.94.123;Initial Catalog=PAESP;Persist Security Info=True;User ID=Fisco;Password=Fisco2019+;MultipleActiveResultSets=True"
+  },
+  
 }
